--- a/ckanext/mds_theme/templates/footer.html
+++ b/ckanext/mds_theme/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="main-footer navbar-fixed-bottom" id="footer">
+<footer class="main-footer" id="footer">
   <div class="restricted-max-width">
     <div id="footer-spacer" class="">
       <div class="footer-section logo col-xs-12 col-sm-6 col-md-6">
