--- a/ckanext/mds_theme/templates/home/index.html
+++ b/ckanext/mds_theme/templates/home/index.html
@@ -8,10 +8,6 @@
 <div id="title" class="jumbotron">
   <div class="container">
     <div class="col-sm-12">
-      <ol class="breadcrumb">
-        <li><a href="/">Inicio</a></li>
-      </ol>
-
       <div class="jumbotron_body text-center">
         <h2>Datos abiertos del Ministerio de Desarrollo Social</h2>
         <p class="description col-xs-10 col-xs-offset-1">
@@ -33,7 +29,7 @@
     </div>
   </div>
 </div>
-<div class="container">
+<div class="container m-b-4">
   <div class="row panels-row m-t-2">
     <div class="col-xs-12 col-sm-6 col-md-4"> <a class="panel panel-default" href="{{ h.url_for(controller='dataset', action='search') }}">
         <div class="panel-body">
