--- a/ckanext/mds_theme/templates/package/read.html
+++ b/ckanext/mds_theme/templates/package/read.html
@@ -1,6 +1,6 @@
 {% extends "package/read_base.html" %}
 
-{% block secondary %}
+{% block primary %}
 <div class="col-md-8 dataset">
   {{ super() }}
   {% block package_description %}
