--- a/ckanext/mds_theme/templates/footer.html
+++ b/ckanext/mds_theme/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="main-footer" id="footer">
+<footer class="main-footer" id="footer"> 
   <div class="restricted-max-width">
     <div id="footer-spacer" class="">
       <div class="footer-section logo col-xs-12 col-sm-6 col-md-6">
@@ -29,7 +29,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid">
+  <!-- <div class="container-fluid">
     <div class="row sub-footer">
       <div class="container">
         <div class="col-sm-6 m-y-1 p-x-0"> <img class="image-responsive" width="288" height="40"
@@ -37,5 +37,5 @@
             alt="Argentina Unida"></div>
       </div>
     </div>
-  </div>
+  </div> -->
 </footer>
