--- a/ckanext/mds_theme/templates/package/base.html
+++ b/ckanext/mds_theme/templates/package/base.html
@@ -13,29 +13,17 @@
     <div id="content" class="dataset"> 
       {% block main_content %}
       <div class="container">
-        {% block flash %}
-        <div class="flash-messages">
-          {% block flash_inner %}
-          {% for message in h.flash.pop_messages() | list %}
-          <div class="alert fade in {{ message.category }}">
-            {{ h.literal(message) }}
-          </div>
-          {% endfor %}
-          {% endblock %}
-        </div>
-        {% endblock %}
-
         <div
-          class="row {% block wrapper_class %}{% endblock %}{% if self.secondary()|trim == '' or c.action=='resource_read' %} no-nav{% endif %} pt-2">
+          class="row {% block wrapper_class %}{% endblock %}{% if self.primary()|trim == '' or c.action=='resource_read' %} no-nav{% endif %} pt-2">
           {#
-          The pre_primary block can be used to add content to before the
+          The pre_secondary block can be used to add content to before the
           rendering of the main content columns of the page.
           #}
-          {% block pre_primary %}
+          {% block pre_secondary %}
           {% endblock %}
 
-          {% block secondary %}
-          <div class="col-md-12">
+          {% block primary %}
+          <div class="col-md-8">
             {% block toolbar %}
             {% block breadcrumb %}
             {% if self.breadcrumb_content() | trim %}
@@ -70,13 +58,14 @@
             {% endblock %}
 
             {% endblock %}
-            {% block secondary_content %}{% endblock %}
+            {% block primary_content %}{% endblock %}
+            {% block primary_content_inner %}{% endblock %}
           </div>
           {% endblock %}
 
-          {% block primary %}
+          {% block secondary %}
           <div class="container col-md-4">
-            {% block primary_content %}
+            {% block secondary_content %}
             <article class="module">
               {% block page_header %}
               <header class="module-content page-header">
@@ -86,17 +75,17 @@
                 </div>
                 {% endif %}
                 <ul class="nav nav-tabs">
-                  {% block content_primary_nav %}{% endblock %}
+                  {% block content_secondary_nav %}{% endblock %}
                 </ul>
               </header>
               {% endblock %}
               <div class="module-content">
-                {% if self.page_primary_action() | trim %}
-                <div class="page_primary_action">
-                  {% block page_primary_action %}{% endblock %}
+                {% if self.page_secondary_action() | trim %}
+                <div class="page_secondary_action">
+                  {% block page_secondary_action %}{% endblock %}
                 </div>
                 {% endif %}
-                {% block primary_content_inner %}
+                {% block secondary_content_inner %}
                 {% endblock %}
               </div>
             </article>
