--- a/ckanext/mds_theme/templates/package/read_base.html
+++ b/ckanext/mds_theme/templates/package/read_base.html
@@ -88,7 +88,7 @@
           Frecuencia de actualización
         </div>
         <div class="row-value">
-          {{ extra.value }}
+          {{ h.freq_to_text(extra.value) }}
         </div>
       </div>
       {% endif %}
