--- a/ckanext/mds_theme/templates/header.html
+++ b/ckanext/mds_theme/templates/header.html
@@ -1,4 +1,4 @@
-<header id="header" class="container-fluid">
+<header id="header">
   <div class="restricted-max-width">
     <div id="header-spacing" class="col-xs-12 col-sm-10 col-sm-offset-1">
       <nav class="navbar navbar-top navbar-default">
