--- a/ckanext/mds_theme/public/custom.css
+++ b/ckanext/mds_theme/public/custom.css
@@ -41,12 +41,14 @@ main {
 }
 
 /* poncho */
-@media (max-width: 420px) {
+@media (max-width: 767px) {
   .navbar .container .navbar-header .navbar-brand img {
-    width: 80px;
+    width: 40%;
   }
   .main {
     padding-top: 0px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 }
 
@@ -72,6 +74,39 @@ section {
 
 /* ckan */
 
+@media (max-width: 767px) {
+  .filters {
+    display: none;
+    position: fixed;
+    overflow: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1000;
+    padding: 10px;
+    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  .js body.filters-modal .filters {
+    display: block;
+  }
+  .mobile-space {
+    margin-top:10px;
+  }
+
+  .module-content {
+    padding: 0px;
+  }
+
+}
+
+.module-heading {
+  margin: 0;
+  padding: 10px 25px;
+  font-size: 14px;
+  line-height: 1.3;
+}
 .dataset-list .panel-hover .panel {
   margin-bottom: 0.6em;
   box-shadow: 0 2px 2px rgb(0 0 0 / 20%);
@@ -149,3 +184,8 @@ main, [role=main], .main {
     padding: 1rem 0;
     margin-top: auto;
   }
+
+.resource-fields {
+  margin-left: 2em!important;
+  margin-right: 2em!important;
+}
