--- a/ckanext/mds_theme/templates/snippets/search_form.html
+++ b/ckanext/mds_theme/templates/snippets/search_form.html
@@ -4,8 +4,31 @@
       <input type="search" class="form-control" id="buscar" required="" aria-required="true" name="q" value="" autocomplete="off" title="Search"
       placeholder="¿Qué dataset buscás?" maxlength="200">
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 mobile-space">
       <button class="btn btn-primary btn-block">Buscar</button>
     </div>
+    {#
+    {% block search_facets %}
+      {% if facets %}
+        <p class="filter-list">
+          {% for field in facets.fields %}
+            {% set search_facets_items = facets.search.get(field)['items'] %}
+            <span class="facet">{{ facets.titles.get(field) }}:</span>
+            {% for value in facets.fields[field] %}
+              <span class="filtered pill">
+                {%- if facets.translated_fields and (field,value) in facets.translated_fields -%}
+                  {{ facets.translated_fields[(field,value)] }}
+                {%- else -%}
+                  {{ h.list_dict_filter(search_facets_items, 'name', 'display_name', value) }}
+                {%- endif %}
+                <a href="{{ facets.remove_field(field, value) }}" class="remove" title="{{ _('Remove') }}"><i class="fa fa-times"></i></a>
+              </span>
+            {% endfor %}
+          {% endfor %}
+        </p>
+        <a class="show-filters btn btn-default">{{ _('Filter Results') }}</a>
+      {% endif %}
+    {% endblock %}
+    #}
   </form>
 </div>
