--- a/ckanext/mds_theme/templates/package/read.html
+++ b/ckanext/mds_theme/templates/package/read.html
@@ -46,9 +46,11 @@
     <hr>
   {% endblock %}
   {% block extras %}
+  {#
   <tr>
-    <td class="dataset-details">{{ pkg_dict.custom_text }}</td>
-  </tr>
+    <td class="dataset-details">{{ pkg_dict.super_theme }}</td>
+  </tr> 
+  #}
   {% endblock %}
   {% block package_resources %}
     {% snippet "package/snippets/resources_list.html", pkg=pkg, resources=pkg.resources, is_activity_archive=is_activity_archive %}
