--- a/ckanext/mds_theme/templates/package/resource_edit_base.html
+++ b/ckanext/mds_theme/templates/package/resource_edit_base.html
@@ -23,6 +23,7 @@
 {% block primary_content %}
   <h1 class="hide-heading">{% block form_title %}{{ _('Edit resource') }}{% endblock %}</h1>
   {% block form %}{% endblock %}
+  {% block primary_content_inner %}{% endblock %}
 {% endblock %}
 
 
