--- a/ckanext/mds_theme/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/mds_theme/templates/package/snippets/package_basic_fields.html
@@ -139,7 +139,35 @@ error=errors.title, classes=['control-full', 'control-large'], attrs={'data-modu
   </div>
   {% endif %}
   {# custom fields #}
-  {{ form.input('custom_text', label=_('Custom Text'), id='field-custom_text', placeholder=_('custom text'),
-  value=data.custom_text, error=errors.custom_text, classes=['control-medium']) }}
+  {{ form.input('super_theme', label=_('Super Theme'), id='field-super_theme', placeholder=_(' '),
+  value=data.super_theme, error=errors.super_theme, classes=['control-medium']) }}
+
+  {{ form.select('update_frequency', 
+      label=_('Frequencia de actualización'), 
+      id='field-update_frequency',
+      selected=data.update_frequency,
+      error=errors.update_frequency,
+      options=[{'name': 'R/P10Y', 'value': 'Cada diez años'},
+        {'name': 'R/P4Y', 'value': 'Cada cuatro años'},
+        {'name': 'R/P3Y', 'value': 'Cada tres años'},
+        {'name': 'R/P2Y', 'value': 'Cada dos años'},
+        {'name': 'R/P1Y', 'value': 'Anualmente'},
+        {'name': 'R/P6M', 'value': 'Cada medio año'},
+        {'name': 'R/P4M', 'value': 'Cuatrimestralmente'},
+        {'name': 'R/P3M', 'value': 'Trimestralmente'},
+        {'name': 'R/P2M', 'value': 'Bimestralmente'},
+        {'name': 'R/P1M', 'value': 'Mensualmente'},
+        {'name': 'R/P0.5M', 'value': 'Cada 15 días'},
+        {'name': 'R/P0.33M', 'value': 'Tres veces por mes'},
+        {'name': 'R/P1W', 'value': 'Semanalmente'},
+        {'name': 'R/P0.5W', 'value': 'Dos veces a la semana'},
+        {'name': 'R/P0.33W', 'value': 'Tres veces a la semana'},
+        {'name': 'R/P1D', 'value': 'Diariamente'},
+        {'name': 'R/PT1H', 'value': 'Cada hora'},
+        {'name': 'R/PT1S', 'value': 'Continuamente actualizado'},
+        {'name': 'eventual', 'value': 'Eventual'}
+      ],
+      classes=['control-medium']
+    ) }}
 
   {% endblock %}
