--- a/ckanext/mds_theme/templates/error_document_template.html
+++ b/ckanext/mds_theme/templates/error_document_template.html
@@ -7,11 +7,11 @@
   <div class="module-content">
     {% if name %}
     <h1>{{ code }} {{ name }}</h1>
-    <script>
+    <!-- <script>
       setTimeout(function () {
         window.location.href = 'https://datosabiertos.desarrollosocial.gob.ar/';
       }, 0);
-    </script>
+    </script> -->
     <p>Redirigiendo a la página principal.</p>
 
     {% endif %}
